feat: Improve project domain.