@@ -1,15 +1,13 @@
 package com.buildware.kbase.project.web;
 
+import static com.buildware.kbase.toolkit.instancio.InstancioUtils.random;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 
 import com.buildware.kbase.project.domain.Project;
-import com.buildware.kbase.project.domain.Visibility;
 import com.buildware.kbase.project.service.ProjectService;
-import com.buildware.kbase.project.web.dto.ProjectDTO;
-import com.buildware.kbase.project.web.mapper.ProjectMapperImpl;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.List;
@@ -25,7 +23,7 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 
 @WebMvcTest(ProjectController.class)
-@Import(ProjectMapperImpl.class)
+@Import(ProjectApiMapperImpl.class)
 @ExtendWith(InstancioExtension.class)
 class ProjectControllerTest {
 
@@ -41,66 +39,55 @@ class ProjectControllerTest {
     @Test
     void should_listPublicProjects_when_noParamProvided() throws Exception {
         // GIVEN
+        var project = random(Project.class);
         when(projectService.listProjects(false))
-                .thenReturn(List.of(Project.builder()
-                        .code("buildware")
-                        .name("Buildware")
-                        .basePath("/dev/buildware")
-                        .visibility(Visibility.PUBLIC)
-                        .build()));
+            .thenReturn(List.of(project));
 
         // WHEN
-        MvcResult result = mockMvc.perform(get("/mcp/projects")).andReturn();
+        MvcResult result = mockMvc.perform(get("/projects")).andReturn();
 
         // THEN
         assertThat(result.getResponse().getStatus()).isEqualTo(200);
-        List<ProjectDTO> body = objectMapper.readValue(
-                result.getResponse().getContentAsByteArray(), new TypeReference<>() {});
+        List<ProjectDTO> body =
+            objectMapper.readValue(result.getResponse().getContentAsByteArray(), new TypeReference<>() {
+            });
+        var actual = body.getFirst();
         assertThat(body).hasSize(1);
-        assertThat(body.get(0).code()).isEqualTo("buildware");
-        assertThat(body.get(0).name()).isEqualTo("Buildware");
+        assertThat(actual.code()).isEqualTo(project.getCode());
+        assertThat(actual.name()).isEqualTo(project.getName());
     }
 
     @Test
     void should_getProject_when_codeExists() throws Exception {
         // GIVEN
-        when(projectService.getByCode("gift-boxes"))
-                .thenReturn(Optional.of(Project.builder()
-                        .code("gift-boxes")
-                        .name("Gift Boxes")
-                        .basePath("/dev/gift-boxes")
-                        .visibility(Visibility.PUBLIC)
-                        .build()));
+        var project = random(Project.class);
+        when(projectService.getByCode("gift-boxes")).thenReturn(Optional.of(project));
 
         // WHEN
-        MvcResult result = mockMvc.perform(get("/mcp/projects/gift-boxes")).andReturn();
+        MvcResult result = mockMvc.perform(get("/projects/gift-boxes")).andReturn();
 
         // THEN
         assertThat(result.getResponse().getStatus()).isEqualTo(200);
         ProjectDTO body = objectMapper.readValue(result.getResponse().getContentAsByteArray(), ProjectDTO.class);
-        assertThat(body.code()).isEqualTo("gift-boxes");
-        assertThat(body.name()).isEqualTo("Gift Boxes");
+        assertThat(body.code()).isEqualTo(project.getCode());
+        assertThat(body.name()).isEqualTo(project.getName());
     }
 
     @Test
     void should_returnSyncedProjects_when_syncIsCalled() throws Exception {
         // GIVEN
-        when(projectService.syncFromFilesystem())
-                .thenReturn(List.of(Project.builder()
-                        .code("acme")
-                        .name("Acme")
-                        .basePath("/dev/acme")
-                        .visibility(Visibility.PUBLIC)
-                        .build()));
+        var project = random(Project.class);
+        when(projectService.syncFromFilesystem()).thenReturn(List.of(project));
 
         // WHEN
-        MvcResult result = mockMvc.perform(post("/mcp/projects/sync")).andReturn();
+        MvcResult result = mockMvc.perform(post("/projects/sync")).andReturn();
 
         // THEN
         assertThat(result.getResponse().getStatus()).isEqualTo(200);
         List<ProjectDTO> body = objectMapper.readValue(
-                result.getResponse().getContentAsByteArray(), new TypeReference<>() {});
+            result.getResponse().getContentAsByteArray(), new TypeReference<>() {
+            });
         assertThat(body).hasSize(1);
-        assertThat(body.get(0).code()).isEqualTo("acme");
+        assertThat(body.getFirst().code()).isEqualTo(project.getCode());
     }
 }
